--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#602238",
-  "background_color": "#ffffff"
+  "theme_color": "#091f2a",
+  "background_color": "#091f2a"
 }
